# meta-openenv-hack

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
openenv_peer_review_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
peer_review_env/: __init__.py  benchmark.py  client.py  data_snapshot.json  grading.py  models.py  tasks.py
peer_review_env/server/: __init__.py  app.py  peer_review_env_environment.py
scripts/: build_openreview_snapshot.py  merge_pdf_markdown_into_snapshot.py  mint_openreview_token.py  modal_pdf_markdown.py  prepare_pdf_manifest.py
server/: __init__.py  app.py  graders.py
